Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-11566

Regression: Code folding does not find end of function correctly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • Qt Creator 3.1.0-beta
    • Qt Creator 3.1.0-beta
    • C/C++/Obj-C++ Support
    • Windows 7 64 bit
      ClangCodeModel disabled (default)
    • 453389e9d23c69309251252a27091fbcf0ff7f8a

      1. Create a new Qt Widgets Application project.
      2. Open the project's file main.cpp:
        #include "mainwindow.h"
        #include <QApplication>
        
        int main(int argc, char *argv[])
        {
            QApplication a(argc, argv);
            MainWindow w;
            w.show();
        
            return a.exec();
        }
        
      3. Fold function main:

      When main is folded, the return and the closing brace should not be shown. Creator 3.0 does this right.

        1. foldmain.png
          4 kB
          Robert Löhning
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kosjar Nikolai Kosjar
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes