CppEditor: Fix folding

The brace depth wasn't explicitly saved as block state and thus got
reset to 0.

Task-number: QTCREATORBUG-11566
Change-Id: I6c4f3c3392c01d65d7037c4723701ca8935ff70e
Reviewed-by: Orgad Shaneh <orgads@gmail.com>